# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2011-11-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change external tcp job handling to utilize a 4 byte header
      (so the max total message size possible for tcp jobs becomes 2GB, but
       udp jobs are likely to be limited to 16KB
       (with the current code and a normal loopback MTU))
    * Fix a queuing bug with forward operations
    * Add msg_size test for testing messages > 16KB but < 4MB (currently 2MB)
      (with the current CloudI API settings, the 4MB limit can be increased)
    * Add timeout decrement for forward operations to prevent infinite messages
    * Fix stderr/stdout stream buffering in the Java CloudI API
    * Add the ability to forward with new job state within an Erlang CloudI job

2011-11-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add code path add/remove/get operations to the CloudI Job API, to provide
      an easy way for the code paths to be modified before an internal job is
      started in a directory CloudI's code server isn't aware of.

2011-11-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the erlang variation to the http_req test
    * Add HTTP headers to the request_info
    * Add loglevel_set to the CloudI Job API, to dynamically change the loglevel
    * Fix a JSON-RPC protocol version problem

2011-11-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add priorities to CloudI messages
    * Add both request_info and response_info to CloudI messages (not yet used)
    * Fix a bug with C/C++ CloudI API data handling

2011-11-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the CloudI logger work with logrotate without special configuration
    * Prevent any services from flooding the CloudI logger
    * Fix ACL allow/deny for complex destinations
    * Make HTTP method suffixes on service destinations on by default

2011-09-06 Michael Truog   <mjtruog [at] gmail (dot) com>
